--- a/requirements.txt
+++ b/requirements.txt
@@ -15,3 +15,5 @@ accelerate==0.26.0
 #bitsandbytes==0.41.1  # LLaMa 4bit
 scipy==1.11.2
 unbabel-comet==2.2.4
+#lexicalrichness==0.5.1
+#spacy==3.8.7
